--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "my-portfolio-site",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
-  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -16,7 +15,8 @@
   "dependencies": {
     "gatsby": "^2.22.15",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-tilt": "^0.1.4"
   },
   "devDependencies": {
     "prettier": "2.0.5"
